add login form into index.html

--- a/DemoApp/index.html
+++ b/DemoApp/index.html
@@ -4,6 +4,22 @@
     <title></title>
 </head>
 <body>
-    <p>this is my first demo work in github</p>
+
+    <table>
+        <tr>
+            <td>Email</td>
+            <td><input id="txtEmail" type="text" /></td>
+        </tr>
+        <tr>
+            <td>Password</td>
+            <td><input id="txtPassword" type="password" /></td>
+        </tr>
+        <tr>
+        <td></td>
+        <td><input type="button" id="btnSubmit" value="Submit" /></td>
+        </tr>
+    </table>
+    
+   
 </body>
 </html>
